working in the logic

--- a/views/new-user.html
+++ b/views/new-user.html
@@ -19,11 +19,17 @@
   <title>Document</title>
 </head>
 <body>
-  <form id="newUser">
+  <form id="newSubscriber">
     <input id="name" type="text" name="user" placeholder="first name">
     <input id="lastname" type="text" name="user" placeholder="last name">
     <input id="email" type="text" name="email" placeholder="email">
-    <input type="submit" >
+    <div id="interests">
+      <input id="newsInterest" type="checkbox" name="checkbox1" value="news" > News <br>
+      <input id="musicInterest" type="checkbox" name="checkbox2" value="music"> Music <br>
+      <input id="videoInterset" type="checkbox" name="checkbox3" value="videos"> Videos <br>
+      <input id="gifInterest" type="checkbox" name="checkbox4" value="gifs"> Gifs <br>
+    </div>
+    <input type="submit">
   </form>
  
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
