--- a/views/new-user.html
+++ b/views/new-user.html
@@ -20,13 +20,13 @@
 </head>
 <body>
   <form id="newSubscriber">
-    <input id="name" type="text" name="user" placeholder="first name">
-    <input id="lastname" type="text" name="user" placeholder="last name">
+    <input id="first-name" type="text" name="user" placeholder="first name">
+    <input id="last-name" type="text" name="user" placeholder="last name">
     <input id="email" type="text" name="email" placeholder="email">
     <div id="interests">
       <input id="newsInterest" type="checkbox" name="checkbox1" value="news" > News <br>
       <input id="musicInterest" type="checkbox" name="checkbox2" value="music"> Music <br>
-      <input id="videoInterset" type="checkbox" name="checkbox3" value="videos"> Videos <br>
+      <input id="videoInterest" type="checkbox" name="checkbox3" value="videos"> Videos <br>
       <input id="gifInterest" type="checkbox" name="checkbox4" value="gifs"> Gifs <br>
     </div>
     <input type="submit">
