added Dashboard functionality.

--- a/views/new-user.html
+++ b/views/new-user.html
@@ -19,6 +19,7 @@
   <title>Document</title>
 </head>
 <body>
+  <div id="container">
   <form id="newSubscriber">
     <input id="first-name" type="text" name="user" placeholder="first name">
     <input id="last-name" type="text" name="user" placeholder="last name">
@@ -31,7 +32,7 @@
     </div>
     <input type="submit">
   </form>
- 
+</div>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
 
