added some style Dashboard

--- a/views/new-user.html
+++ b/views/new-user.html
@@ -69,18 +69,6 @@
       <label for="email">Email</label>
       <input id="user-email" class="form-control form-control-lg empty" type="email" name="email" placeholder="example: hDuff@gmail.com" />
     </div>
-<!-- <div class="mb-4">
-                <label for="phone">Phone</label>
-                <input class="form-control form-control-lg empty" type="text" id="phone" name="phone" placeholder="example: 555-555-5555" />
-              </div>
-              <div class="mb-4">
-                <label for="street">Street Address</label>
-                <input class="form-control form-control-lg empty" type="text" id="street" name="street" placeholder="example: 22 Sesame St." />
-              </div>
-              <div class="mb-4">
-                <label for="zip">Zip Code</label>
-                <input class="form-control form-control-lg empty" type="text" id="zip" name="zip" placeholder="example: 55555" />
-              </div> -->
               <div id="interests">
                   <input class="checkbox" id="newsInterest" type="checkbox" name="checkbox1" value="news" > News <br>
                   <input class="checkbox" id="musicInterest" type="checkbox" name="checkbox2" value="music"> Music <br>
@@ -92,23 +80,11 @@
             </form>
           </section>
         </main>
-  <!-- <form id="newSubscriber">
-    <input class="empty" id="first-name" type="text" name="user" placeholder="first name">
-    <input class="empty" id="last-name" type="text" name="user" placeholder="last name">
-    <input class="empty" id="email" type="text" name="email" placeholder="email">
-    <div id="interests">
-      <input class="checkbox" id="newsInterest" type="checkbox" name="checkbox1" value="news" > News <br>
-      <input class="checkbox" id="musicInterest" type="checkbox" name="checkbox2" value="music"> Music <br>
-      <input class="checkbox" id="videoInterest" type="checkbox" name="checkbox3" value="videos"> Videos <br>
-      <input class="checkbox" id="gifInterest" type="checkbox" name="checkbox4" value="gifs"> Gifs <br>
-    </div>
-    <input type="submit">
-  </form> -->
-<!-- </div> -->
+
  <!-- Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></!
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
+ </body>
 </html>
