--- a/public/style/main.css
+++ b/public/style/main.css
@@ -1,5 +1,20 @@
 /* -----------------------Home page -------------------------------------- */
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
 
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+}
+
+/* 
 .carousel-inner {
   width: 100vw;
   height: 50vh;
@@ -32,34 +47,19 @@
 
 .navbar-toggler {
   border: none;
-}
+} */
+
 
 
 /* ----------------------------------------------------------------- */
 
-
-
-
-
-
-
-
-
-
-
-
-
-table{
-  margin: 25px auto;
- 
-}
-
-td{
-  border:2px solid black;
-  width: 200px;
-  text-align: center;
-}
-
+/* ----------------------------- DashBoard------------------------------------ */
 #header {
+  text-align: center;
   font-weight: bolder;
+}
+
+
+tbody{
+  text-align: center;
 }
