--- a/views/index.html
+++ b/views/index.html
@@ -61,21 +61,21 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="header" src="./images/header1.png"  alt="hilary hero">
+                <img class="header" src="/images/car.jpeg"  alt="hilary hero">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>First slide label</h5>
                   <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img class="header" src="./images/header2.png"  alt="https://picsum.photos/800">
+                <img class="header" src="/puimages/"  alt="https://picsum.photos/800">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Second slide label</h5>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img class="header" src="./images/header3.png"  alt="https://picsum.photos/600">
+                <img class="header" src="/images/header3.png"  alt="https://picsum.photos/600">
             <div class="carousel-caption d-none d-md-block">
                   <h5>Third slide label</h5>
                   <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
