--- a/views/new-user.html
+++ b/views/new-user.html
@@ -76,10 +76,25 @@
                   <input class="checkbox" id="gifInterest" type="checkbox" name="checkbox4" value="gifs"> Gifs <br>
               </div>
       
-              <input class="btn btn-primary" type="submit">
+              <input id="subuser" class="btn btn-primary" type="submit">
             </form>
           </section>
         </main>
+
+        <!-- Trigger/Open The Modal -->
+<!-- <button id="myBtn">Open Modal</button> -->
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <!-- <p>Some text in the Modal..</p> -->
+    <h1>You're in!</h1>
+  </div>
+
+</div>
 
  <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
